# job-coach

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_jwt_script.py
.github/ISSUE_TEMPLATE/: wip.md
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 18f05b444c84_initial_models.py  ca7b30bdd8af_add_position_number_to_job_applications.py
src/job_coach/: main.py
src/job_coach/app/: main.py
src/job_coach/app/api/: __init__.py  dependencies.py
src/job_coach/app/api/routes/: __init__.py  analysis.py  jobs.py  rag.py  resume.py  users.py
src/job_coach/app/core/: __init__.py  celery.py  config.py  logger.py  security.py
src/job_coach/app/db/: __init__.py  dependencies.py  models.py  session.py
src/job_coach/app/models/: __init__.py  applications.py  resume.py  user.py
src/job_coach/app/schemas/: __init__.py  job.py  resume.py  user.py
src/job_coach/app/services/: indexing_service.py  job_service.py  user_service.py
src/job_coach/app/tasks/: __init__.py  worker.py
src/job_coach/ml/: __init__.py
src/job_coach/ml/analysis/: __init__.py  semantic_match.py  skill_gap.py
src/job_coach/ml/embeddings/: __init__.py  service.py  vector_store.py
src/job_coach/ml/evaluation/: __init__.py  metrics.py
src/job_coach/ml/ingestion/: __init__.py  parser.py
src/job_coach/ml/rag/: __init__.py  pipeline.py
tests/: conftest.py  test_analysis.py  test_auth.py  test_indexing.py  test_jobs.py  test_main.py  test_ml.py  test_rag.py  test_resume.py  test_security.py
