[project]
name = "job_coach"
version = "0.1.0"
description = "My agent to help find the job"
dependencies = [
    "langchain",
    "langchain-community",
    "chromadb"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]