[project]
name = "job_coach"
version = "0.1.0"
description = "AI-powered Job Coach backend"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "psycopg2-binary",
    "pydantic>=2.12",
    "langchain",
    "langchain-community",
    "chromadb",
    "sentence-transformers",
    "celery",
    "redis",
    "python-dotenv",
    "orjson"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "ipython"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]