[project]
name = "job_coach"
version = "0.1.0"
description = "AI-powered Job Coach backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "python-dotenv",
    "orjson",
    # AI / ML (uncomment when needed)
    # "langchain",
    # "langchain-community",
    # "langchain-huggingface",
    # "sentence-transformers",
    # "qdrant-client",
    # "PyMuPDF",
    # "numpy",
    # Infrastructure (uncomment when needed)
    # "celery",
    # "redis",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "ipython",
]
ml = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "sentence-transformers",
    "qdrant-client",
    "PyMuPDF",
    "numpy",
]
infra = [
    "celery",
    "redis",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 90
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
